--- a/package.json
+++ b/package.json
@@ -23,13 +23,15 @@
     "uuid": "^7.0.3"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.2",
     "@types/express": "4.17.3",
     "@types/express-serve-static-core": "4.17.2",
     "@types/jest": "^25.2.1",
-    "@types/multer": "^1.4.2",
+    "@types/multer": "^1.4.3",
     "@types/supertest": "^2.0.8",
     "@typescript-eslint/eslint-plugin": "^2.27.0",
     "@typescript-eslint/parser": "^2.27.0",
+    "bcryptjs": "^2.4.3",
     "cross-env": "^7.0.2",
     "eslint": "^6.8.0",
     "eslint-config-airbnb-base": "^14.1.0",
